@@ -8,9 +8,10 @@ plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
     id 'eclipse' // only required when using Eclipse
+    id 'java-library'
 }
 
-def yFiles = "$rootDir/yFiles"
+
 def export = "$projectDir/export"
 def ocd = "$rootDir/ocd"
 
@@ -25,21 +26,20 @@ repositories {
 }
 
 dependencies {
-    //yGuard
-    compileOnly 'com.yworks:yguard:3.0.0'
+
 
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13'
 
     // las2peer bundle which is not necessary in the runtime path
     // compileOnly will be moved into the lib dir afterwards
-    compileOnly "i5:las2peer-bundle:${project.property('core.version')}"
+    api "i5:las2peer-bundle:${project.property('core.version')}"
 
     //ocd service deps
-    compileOnly "org.apache.commons:commons-exec:1.3"
+    implementation "org.apache.commons:commons-exec:1.3"
     compileOnly "com.google.guava:guava:31.0.1-jre"
-    compileOnly "org.la4j:la4j:0.4.9"
-    compileOnly "org.eclipse.persistence:eclipselink:2.7.9"
+    implementation "org.la4j:la4j:0.4.9"
+    implementation "org.eclipse.persistence:eclipselink:2.7.9"
     compileOnly "org.apache.geronimo.specs:geronimo-jpa_2.0_spec:1.1"
     compileOnly("commons-jxpath:commons-jxpath:1.3") {
         exclude group: 'xml-apis', module: 'xml-apis'
@@ -51,34 +51,41 @@ dependencies {
     compileOnly "net.minidev:json-smart:2.4.7"
     compileOnly "com.googlecode.json-simple:json-simple:1.1.1"
     compileOnly "org.apache.commons:commons-pool2:2.11.1"
-    compileOnly "org.apache.commons:commons-dbcp2:2.9.0"
+    implementation "org.apache.commons:commons-dbcp2:2.9.0"
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
     compileOnly "org.apache.commons:commons-math3:3.6.1"
     compileOnly "org.apache.geronimo.specs:geronimo-jpa_2.0_spec:1.1"
-    compileOnly "org.apache.lucene:lucene-core:8.9.1"
-    compileOnly "org.apache.lucene:lucene-analyzers-common:8.11.1"
+    implementation "org.apache.lucene:lucene-core:8.9.1"
+    implementation "org.apache.lucene:lucene-analyzers-common:8.11.1"
     compileOnly "org.apache.poi:poi:5.1.0"
-    compileOnly "org.apache.poi:poi-ooxml:5.1.0"
+    implementation "org.apache.poi:poi-ooxml:5.1.0"
 
     compileOnly "org.apache.jena:jena-core:4.3.2"
     //Exclude jackson modules as they are already included by las2peer and newer versions may break things like swagger
-    compileOnly ("org.apache.jena:jena-arq:4.3.2") {
+    implementation ("org.apache.jena:jena-arq:4.3.2") {
         exclude group: "com.fasterxml.jackson.core", module: "jackson-core"
         exclude group: "com.fasterxml.jackson.core", module: "jackson-databind"
     }
 
     compileOnly "org.ejml:ejml-core:0.41"
-    compileOnly "org.hsqldb:hsqldb:2.6.1"
+    implementation "org.hsqldb:hsqldb:2.6.1"
     compileOnly "org.apache.xmlgraphics:batik-svggen:1.14"
     compileOnly("org.apache.xmlgraphics:batik-bridge:1.14") {
         exclude group: 'xml-apis', module: 'xml-apis'
     }
-    compileOnly "org.mockito:mockito-all:1.9.5"
-    compileOnly "fr.irit.smac.thirdparty.edu.gmu.cs:mason:19"
-    compileOnly "org.ojalgo:ojalgo:50.0.0"
+    implementation "org.mockito:mockito-all:1.9.5"
+    implementation "fr.irit.smac.thirdparty.edu.gmu.cs:mason:19"
+    implementation "org.ojalgo:ojalgo:50.0.0"
     compileOnly "net.sbbi:sbbi-upnplib:1.0.4"
+    implementation "org.graphstream:gs-core:2.0"
 
-    //yFiles
-    compileOnly fileTree(dir: "${yFiles}", include: '*.jar')
+    //gs-algo version that includes HopcroftTarjanBiconnectedComponents
+    implementation "org.graphstream:gs-algo:2.0.ACIS"
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+
+    //arangoDB Java driver
+    implementation "com.arangodb:arangodb-java-driver:6.18.0"
+    implementation "com.arangodb:jackson-dataformat-velocypack:3.0.1"
 }
 
 configurations {
@@ -93,10 +100,14 @@ jar {
         attributes "Library-SymbolicName": "${project.property('service.name')}"
     }
 
-    from { (configurations.runtimeClasspath).collect { it.isDirectory() ? it : zipTree(it) } } {
+    from { configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }}  {
         // Exclude signatures to be able to natively bundle signed jars
         exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
     }
+   duplicatesStrategy = 'include' // this is needed due to duplicate error in gradle 7.0 which seems to be a bug
+
+
+
 }
 
 application {
@@ -106,11 +117,11 @@ application {
 
 // put all .jar files into export/jars folder
 tasks.withType(Jar) {
-    destinationDir = file("$projectDir/export/jars")
+    getDestinationDirectory().set(file("$projectDir/export/jars"))
 }
 
 javadoc {
-    destinationDir = file("$projectDir/export/doc")
+    setDestinationDir(file("$projectDir/export/doc"))
 }
 
 build.dependsOn "javadoc"
@@ -157,7 +168,7 @@ task startscripts {
 # this script is autogenerated by 'gradle startscripts'
 # it starts a las2peer node providing the service '${project.property('service.name')}.${project.property('service.class')}' of this project
 # pls execute it from the root folder of your deployment, e. g. ./bin/start_network.sh
-java -cp "lib/*:service/*" i5.las2peer.tools.L2pNodeLauncher --port 9011 --service-directory service uploadStartupDirectory startService\\(\\'${project.property('service.name')}.${project.property('service.class')}@${project.property('service.version')}\\'\\) startWebConnector interactive
+java -cp "lib/*:service/*" --add-opens java.base/java.lang=ALL-UNNAMED i5.las2peer.tools.L2pNodeLauncher --port 9011 --service-directory service uploadStartupDirectory startService\\(\\'${project.property('service.name')}.${project.property('service.class')}@${project.property('service.version')}\\'\\) startWebConnector interactive
 """
     new File("$rootDir/bin", "start_network.bat").text = """:: this script is autogenerated by 'gradle startscripts'
 :: it starts a las2peer node providing the service '${project.property('service.name')}.${project.property('service.class')}' of this project
@@ -167,7 +178,7 @@ cd %~p0
 cd ..
 set BASE=%CD%
 set CLASSPATH="%BASE%/lib/*;%BASE%/service/*;"
-java -cp %CLASSPATH% i5.las2peer.tools.L2pNodeLauncher --port 9011 --service-directory service uploadStartupDirectory startService('${project.property('service.name')}.${project.property('service.class')}@${project.property('service.version')}') startWebConnector interactive
+java -cp %CLASSPATH% --add-opens java.base/java.lang=ALL-UNNAMED i5.las2peer.tools.L2pNodeLauncher --port 9011 --service-directory service uploadStartupDirectory startService('${project.property('service.name')}.${project.property('service.class')}@${project.property('service.version')}') startWebConnector interactive
 pause
 """
 }
@@ -254,7 +265,7 @@ build.dependsOn "generateAgents"
 clean.doLast {
     file("$ocd/db").deleteDir()
     file("$ocd/indexes").deleteDir()
-    file("$ocd/yGuard").deleteDir()
+
 
     file("$rootDir/tmp").deleteDir()
     file("$rootDir/lib").deleteDir()
@@ -278,55 +289,17 @@ test {
     workingDir = file("$rootDir")
 }
 
-task yguard {
-    group 'yGuard'
-    description 'Obfuscates and shrinks the java archive.'
-
-    mkdir "${export}/obfuscated"
-    mkdir "$ocd/yGuard"
-
-    doLast {
-        ant.taskdef(
-                name: 'yguard',
-                classname: 'com.yworks.yguard.YGuardTask',
-                classpath: '../lib/yGuard-3.0.0.jar'
-        )
-
-        ant.yguard {
-            // see the yGuard task documentation for information about the yGuard element
-            // Obfuscate the yFiles Jar.
-            inoutpair(in: "${yFiles}/y.jar", out: "./export/obfuscated/y.jar")
-            inoutpair(in: "${yFiles}/ysvg.jar", out: "./export/obfuscated/ysvg.jar")
-            // While obfuscating, adjust the names of yFiles features in the
-            // application's Jar file.
-            inoutpair(in: "${export}/jars/rest_ocd_services.jar", out: "${export}/obfuscated/rest_ocd_services.jar")
-
-            externalclasses {
-                //pathelement(location: configurations.compileOnly.asPath)
-                fileset(dir: "${rootDir}/lib") {
-                    include(name: '**/*.jar')
-                }
-            }
-            // ...using the yGuard 'rename' task.
-            rename(logfile: "${rootDir}/ocd/yGuard/log.xml", replaceClassNameStrings: "true") {
-                property(name: "obfuscation-prefix", value: "yguard")
-                keep {
-                    'class'(classes: "private", methods: "private", fields: "private") {
-                        patternset {
-                            //< !--define classes / methods / fields not to be renamed-- >
-                            include(name: "i5.**")
-                            //< !--exlude custom classes extending / implementing yFiles classes-->
-                            exclude(name: "i5.las2peer.services.ocd.graphs.CustomGraph")
-                            exclude(name: "i5.las2peer.services.ocd.graphs.CustomGraphListener")
-                        }
-                    }
-                    //< keep custom field names required for persistence
-                    field('class': "i5.las2peer.services.ocd.graphs.CustomGraph", name: "id")
-                    field('class': "i5.las2peer.services.ocd.graphs.CustomGraph", name: "userName")
-                    field('class': "i5.las2peer.services.ocd.graphs.CustomGraph", name: "creationMethod")
-                }
-            }
-        }
+// Executes WebOCD tests without database tests. This task is used for github actions.
+task testWithoutDB(type: Test) {
+    workingDir = file("$rootDir")
+    filter {
+        excludeTestsMatching '**.ServiceDatabaseTest'
+        excludeTestsMatching '**.ServiceTest'
+        excludeTestsMatching '**.SimulationPersistenceTest'
+        excludeTestsMatching '**.CoverDatabaseTest'
+        excludeTestsMatching '**.CustomGraphDatabaseTest'
+        excludeTestsMatching '**.DatabaseMethodTest'
+        excludeTestsMatching '**.DatabaseTest'
     }
 }
 
